mapcss/generated/MapCSSParser.py
# Generated from MapCSS.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MapCSSParser ( Parser ):

    grammarFileName = "MapCSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'?'", "'?!'", "'\\u2208'", "'\\u29C9'", 
                     "'\\u2286'", "'\\u2287'", "'\\u2288'", "'\\u2289'", 
                     "'('", "')'", "'.'", "<INVALID>", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'=~'", "'!~'", "'^='", "'$='", "'*='", 
                     "'~='", "'||'", "'&&'", "'*'", "'/'", "'%'", "'+'", 
                     "'-'", "'!'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'}'", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "QUESTION_MARK", "QUESTION_MARK_NEGATED", 
                      "OP_INCLUDED_IN", "OP_INTERSECTS", "OP_SUBSET", "OP_SUPERSET", 
                      "OP_NOSUBSET", "OP_NOSUPERSET", "PAR_OPEN", "PAR_CLOSE", 
                      "DOT", "OP_EQ", "OP_NEQ", "OP_LE", "OP_GE", "OP_LT", 
                      "OP_GT", "OP_MATCH", "OP_NOT_MATCH", "OP_STARTS_WITH", 
                      "OP_ENDS_WITH", "OP_SUBSTRING", "OP_CONTAINS", "OP_OR", 
                      "OP_AND", "OP_MUL", "OP_DIV", "OP_MOD", "OP_PLUS", 
                      "OP_MINUS", "OP_NOT", "SET", "IMPORT", "SUPPORTS", 
                      "SUPPORTS_NOT", "SUPPORTS_AND", "SUPPORTS_OR", "NCOMPONENT", 
                      "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COLON", 
                      "SEMICOLON", "DQUOTED_STRING", "SQUOTED_STRING", "POSITIVE_INT", 
                      "NEGATIVE_INT", "POSITIVE_FLOAT", "NEGATIVE_FLOAT", 
                      "RANGE", "REGEXP", "WS", "SL_COMMENT", "ML_COMMENT", 
                      "STYLESHEET", "RULE", "SIMPLE_SELECTOR", "DESCENDANT_COMBINATOR", 
                      "CHILD_COMBINATOR", "PARENT_COMBINATOR", "TYPE_SELECTOR", 
                      "ZOOM_SELECTOR", "ATTRIBUTE_SELECTOR", "CLASS_SELECTOR", 
                      "PSEUDO_CLASS_SELECTOR", "LAYER_ID_SELECTOR", "DECLARATION_BLOCK", 
                      "DECLARATION", "VALUE_RGB", "VALUE_RGBA", "VALUE_URL", 
                      "VALUE_KEYWORD", "VALUE_QUOTED", "VALUE_FLOAT", "VALUE_INT", 
                      "VALUE_PERCENTAGE", "VALUE_POINTS", "VALUE_PIXELS", 
                      "VALUE_LIST", "VALUE_REGEXP", "VALUE_INCREMENT", "FUNCTION_CALL", 
                      "PREDICATE", "TR_CALL", "EVAL_CALL" ]

    RULE_stylesheet = 0
    RULE_entry = 1
    RULE_rule_ = 2
    RULE_selector = 3
    RULE_parent_child_selector_operator = 4
    RULE_simple_selector_operator = 5
    RULE_link_selector = 6
    RULE_layer_id_selector = 7
    RULE_simple_selector = 8
    RULE_zoom_selector = 9
    RULE_quoted = 10
    RULE_cssident = 11
    RULE_osmtag = 12
    RULE_attribute_selector = 13
    RULE_predicate = 14
    RULE_predicate_simple = 15
    RULE_class_selector = 16
    RULE_pseudo_class_selector = 17
    RULE_type_selector = 18
    RULE_declaration_block = 19
    RULE_declarations = 20
    RULE_declaration = 21
    RULE_declaration_property = 22
    RULE_declaration_value = 23
    RULE_int_ = 24
    RULE_single_value = 25
    RULE_supports_block = 26
    RULE_supports_rule = 27
    RULE_supports_condition = 28
    RULE_supports_in_parens = 29
    RULE_supports_declaration = 30
    RULE_booleanOperator = 31
    RULE_numericOperator = 32
    RULE_valueOperator = 33
    RULE_regexOperator = 34
    RULE_booleanExpression = 35
    RULE_valueExpression = 36
    RULE_regexExpression = 37
    RULE_functionExpression = 38
    RULE_primaryExpression = 39

    ruleNames =  [ "stylesheet", "entry", "rule_", "selector", "parent_child_selector_operator", 
                   "simple_selector_operator", "link_selector", "layer_id_selector", 
                   "simple_selector", "zoom_selector", "quoted", "cssident", 
                   "osmtag", "attribute_selector", "predicate", "predicate_simple", 
                   "class_selector", "pseudo_class_selector", "type_selector", 
                   "declaration_block", "declarations", "declaration", "declaration_property", 
                   "declaration_value", "int_", "single_value", "supports_block", 
                   "supports_rule", "supports_condition", "supports_in_parens", 
                   "supports_declaration", "booleanOperator", "numericOperator", 
                   "valueOperator", "regexOperator", "booleanExpression", 
                   "valueExpression", "regexExpression", "functionExpression", 
                   "primaryExpression" ]

    EOF = Token.EOF
    COMMA=1
    QUESTION_MARK=2
    QUESTION_MARK_NEGATED=3
    OP_INCLUDED_IN=4
    OP_INTERSECTS=5
    OP_SUBSET=6
    OP_SUPERSET=7
    OP_NOSUBSET=8
    OP_NOSUPERSET=9
    PAR_OPEN=10
    PAR_CLOSE=11
    DOT=12
    OP_EQ=13
    OP_NEQ=14
    OP_LE=15
    OP_GE=16
    OP_LT=17
    OP_GT=18
    OP_MATCH=19
    OP_NOT_MATCH=20
    OP_STARTS_WITH=21
    OP_ENDS_WITH=22
    OP_SUBSTRING=23
    OP_CONTAINS=24
    OP_OR=25
    OP_AND=26
    OP_MUL=27
    OP_DIV=28
    OP_MOD=29
    OP_PLUS=30
    OP_MINUS=31
    OP_NOT=32
    SET=33
    IMPORT=34
    SUPPORTS=35
    SUPPORTS_NOT=36
    SUPPORTS_AND=37
    SUPPORTS_OR=38
    NCOMPONENT=39
    LBRACKET=40
    RBRACKET=41
    LBRACE=42
    RBRACE=43
    COLON=44
    SEMICOLON=45
    DQUOTED_STRING=46
    SQUOTED_STRING=47
    POSITIVE_INT=48
    NEGATIVE_INT=49
    POSITIVE_FLOAT=50
    NEGATIVE_FLOAT=51
    RANGE=52
    REGEXP=53
    WS=54
    SL_COMMENT=55
    ML_COMMENT=56
    STYLESHEET=57
    RULE=58
    SIMPLE_SELECTOR=59
    DESCENDANT_COMBINATOR=60
    CHILD_COMBINATOR=61
    PARENT_COMBINATOR=62
    TYPE_SELECTOR=63
    ZOOM_SELECTOR=64
    ATTRIBUTE_SELECTOR=65
    CLASS_SELECTOR=66
    PSEUDO_CLASS_SELECTOR=67
    LAYER_ID_SELECTOR=68
    DECLARATION_BLOCK=69
    DECLARATION=70
    VALUE_RGB=71
    VALUE_RGBA=72
    VALUE_URL=73
    VALUE_KEYWORD=74
    VALUE_QUOTED=75
    VALUE_FLOAT=76
    VALUE_INT=77
    VALUE_PERCENTAGE=78
    VALUE_POINTS=79
    VALUE_PIXELS=80
    VALUE_LIST=81
    VALUE_REGEXP=82
    VALUE_INCREMENT=83
    FUNCTION_CALL=84
    PREDICATE=85
    TR_CALL=86
    EVAL_CALL=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StylesheetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MapCSSParser.EOF, 0)

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.EntryContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.EntryContext,i)


        def getRuleIndex(self):
            return MapCSSParser.RULE_stylesheet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStylesheet" ):
                listener.enterStylesheet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStylesheet" ):
                listener.exitStylesheet(self)




    def stylesheet(self):

        localctx = MapCSSParser.StylesheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stylesheet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_MUL) | (1 << MapCSSParser.OP_MINUS) | (1 << MapCSSParser.SUPPORTS) | (1 << MapCSSParser.NCOMPONENT))) != 0):
                self.state = 80
                self.entry()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(MapCSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self):
            return self.getTypedRuleContext(MapCSSParser.Rule_Context,0)


        def supports_block(self):
            return self.getTypedRuleContext(MapCSSParser.Supports_blockContext,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = MapCSSParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entry)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MapCSSParser.OP_MUL, MapCSSParser.OP_MINUS, MapCSSParser.NCOMPONENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.rule_()
                pass
            elif token in [MapCSSParser.SUPPORTS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.supports_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.SelectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.SelectorContext,i)


        def declaration_block(self):
            return self.getTypedRuleContext(MapCSSParser.Declaration_blockContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MapCSSParser.COMMA)
            else:
                return self.getToken(MapCSSParser.COMMA, i)

        def getRuleIndex(self):
            return MapCSSParser.RULE_rule_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule_" ):
                listener.enterRule_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule_" ):
                listener.exitRule_(self)




    def rule_(self):

        localctx = MapCSSParser.Rule_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.selector()
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.match(MapCSSParser.COMMA)
                    self.state = 94
                    self.selector() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MapCSSParser.COMMA:
                self.state = 100
                self.match(MapCSSParser.COMMA)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.declaration_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Simple_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Simple_selectorContext,i)


        def parent_child_selector_operator(self):
            return self.getTypedRuleContext(MapCSSParser.Parent_child_selector_operatorContext,0)


        def link_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Link_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Link_selectorContext,i)


        def pseudo_class_selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapCSSParser.Pseudo_class_selectorContext)
            else:
                return self.getTypedRuleContext(MapCSSParser.Pseudo_class_selectorContext,i)


        def simple_selector_operator(self):
            return self.getTypedRuleContext(MapCSSParser.Simple_selector_operatorContext,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelector" ):
                listener.enterSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelector" ):
                listener.exitSelector(self)




    def selector(self):

        localctx = MapCSSParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selector)
        self._la = 0 # Token type
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.simple_selector()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.simple_selector()
                self.state = 110
                self.simple_selector()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.simple_selector()
                self.state = 113
                self.parent_child_selector_operator()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_NOT) | (1 << MapCSSParser.LBRACKET) | (1 << MapCSSParser.COLON))) != 0):
                    self.state = 116
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MapCSSParser.LBRACKET]:
                        self.state = 114
                        self.link_selector()
                        pass
                    elif token in [MapCSSParser.OP_NOT, MapCSSParser.COLON]:
                        self.state = 115
                        self.pseudo_class_selector()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.simple_selector()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.simple_selector()
                self.state = 124
                self.simple_selector_operator()
                self.state = 125
                self.simple_selector()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parent_child_selector_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP_GT(self):
            return self.getToken(MapCSSParser.OP_GT, 0)

        def OP_LT(self):
            return self.getToken(MapCSSParser.OP_LT, 0)

        def getRuleIndex(self):
            return MapCSSParser.RULE_parent_child_selector_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParent_child_selector_operator" ):
                listener.enterParent_child_selector_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParent_child_selector_operator" ):
                listener.exitParent_child_selector_operator(self)




    def parent_child_selector_operator(self):

        localctx = MapCSSParser.Parent_child_selector_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parent_child_selector_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not(_la==MapCSSParser.OP_LT or _la==MapCSSParser.OP_GT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_selector_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP_INCLUDED_IN(self):
            return self.getToken(MapCSSParser.OP_INCLUDED_IN, 0)

        def OP_INTERSECTS(self):
            return self.getToken(MapCSSParser.OP_INTERSECTS, 0)

        def OP_SUBSET(self):
            return self.getToken(MapCSSParser.OP_SUBSET, 0)

        def OP_SUPERSET(self):
            return self.getToken(MapCSSParser.OP_SUPERSET, 0)

        def OP_NOSUBSET(self):
            return self.getToken(MapCSSParser.OP_NOSUBSET, 0)

        def OP_NOSUPERSET(self):
            return self.getToken(MapCSSParser.OP_NOSUPERSET, 0)

        def getRuleIndex(self):
            return MapCSSParser.RULE_simple_selector_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_selector_operator" ):
                listener.enterSimple_selector_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_selector_operator" ):
                listener.exitSimple_selector_operator(self)




    def simple_selector_operator(self):

        localctx = MapCSSParser.Simple_selector_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_selector_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MapCSSParser.OP_INCLUDED_IN) | (1 << MapCSSParser.OP_INTERSECTS) | (1 << MapCSSParser.OP_SUBSET) | (1 << MapCSSParser.OP_SUPERSET) | (1 << MapCSSParser.OP_NOSUBSET) | (1 << MapCSSParser.OP_NOSUPERSET))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Link_selectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None # Int_Context

        def LBRACKET(self):
            return self.getToken(MapCSSParser.LBRACKET, 0)

        def cssident(self):
            return self.getTypedRuleContext(MapCSSParser.CssidentContext,0)


        def valueOperator(self):
            return self.getTypedRuleContext(MapCSSParser.ValueOperatorContext,0)


        def valueExpression(self):
            return self.getTypedRuleContext(MapCSSParser.ValueExpressionContext,0)


        def RBRACKET(self):
            return self.getToken(MapCSSParser.RBRACKET, 0)

        def regexOperator(self):
            return self.getTypedRuleContext(MapCSSParser.RegexOperatorContext,0)


        def regexExpression(self):
            return self.getTypedRuleContext(MapCSSParser.RegexExpressionContext,0)


        def numericOperator(self):
            return self.getTypedRuleContext(MapCSSParser.NumericOperatorContext,0)


        def int_(self):
            return self.getTypedRuleContext(MapCSSParser.Int_Context,0)


        def getRuleIndex(self):
            return MapCSSParser.RULE_link_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink_selector" ):
                listener.enterLink_selector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink_selector" ):
                listener.exitLink_selector(self)




    def link_selector(self):
